--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Web API com Node.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./index.js localhost 3000"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/fanticheli/back-conversor-de-moedas-/issues"
   },
-  "homepage": "https://github.com/fanticheli/back-conversor-de-moedas-#readme"
+  "homepage": "https://github.com/fanticheli/back-conversor-de-moedas-#readme",
+  "devDependencies": {
+    "mocha": "^9.2.2",
+    "nodemon": "^2.0.15"
+  },
+  "dependencies": {
+    "express": "^4.17.3",
+    "mongoose": "^6.2.9"
+  }
 }
