Ajustando algumas configs

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/fanticheli/back-conversor-de-moedas-.git"
   },
-  "author": "",
+  "author": "Igor Fanticheli",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/fanticheli/back-conversor-de-moedas-/issues"
