--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Web API com Node.js",
   "main": "index.js",
   "scripts": {
-    "test": "npx mocha -w --parallel ./__tests__/**/*.test.js",
-    "test:cov": "npx nyc npx mocha --parallel ./__tests__/**/*.test.js",
+    "test": "NODE_ENV=test npx mocha --timeout 10000 -w --parallel ./__tests__/**/*.test.js",
+    "test:cov": "NODE_ENV=test npx nyc npx mocha --timeout 10000 --parallel ./__tests__/**/*.test.js",
     "dev": "nodemon src/server.js",
     "start": "node src/server.js"
   },
@@ -22,11 +22,13 @@
   "devDependencies": {
     "chai": "^4.3.6",
     "mocha": "^9.2.2",
+    "mongodb-memory-server": "^8.4.2",
     "nodemon": "^2.0.15",
     "nyc": "^15.1.0",
     "supertest": "^6.2.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.2.9"
