--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,13 @@
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
+env:
+  - CODACY_PROJECT_TOKEN="..."
+
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  say-hello:
+  test-report-coverage:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
@@ -15,12 +18,12 @@ jobs:
     steps:
       - checkout
       - run:
-          name: "Say hello"
+          name: "Primeiro Passo"
           command: "echo Hello, World!"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  say-hello-workflow:
+  report-coverage:
     jobs:
-      - say-hello
+      - test-report-coverage
