--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,18 +9,18 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Setup dependencies
+          name: "Setup dependencies"
           command: |
             sudo composer self-update
             composer install -n --prefer-dist
       - run:
-          name: Setup Code Climate test-reporter
+          name: "Setup Code Climate test-reporter"
           command: |
           # download test reporter as a static binary
             curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
             chmod +x ./cc-test-reporter
       - run:
-          name: Run tests
+          name: "Run tests"
           command: |
             sudo docker-php-ext-enable xdebug
             ./cc-test-reporter before-build
