--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,20 +9,13 @@ jobs:
     steps:
       - checkout
       - run:
-          name: "Setup dependencies"
+          name: "Setupdependencies"
           command: |
             sudo composer self-update
             composer install -n --prefer-dist
       - run:
-          name: "Setup Code Climate test-reporter"
-          command: |
-          # download test reporter as a static binary
-            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-            chmod +x ./cc-test-reporter
+          name: "SetupCodeClimatetest-reporter"
+          command: "curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter chmod +x ./cc-test-reporter"
       - run:
-          name: "Run tests"
-          command: |
-            sudo docker-php-ext-enable xdebug
-            ./cc-test-reporter before-build
-            sudo vendor/bin/phpunit --coverage-clover clover.xml
-            ./cc-test-reporter after-build --coverage-input-type clover --exit-code $?
+          name: "Runtests"
+          command: "sudo docker-php-ext-enable xdebug ./cc-test-reporter before-build sudo vendor/bin/phpunit --coverage-clover clover.xml ./cc-test-reporter after-build --coverage-input-type clover --exit-code $?"
