--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,9 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
+      # Use BASH instead of DASH! see: https://ubuntuforums.org/showthread.php?t=1932504
+      - run: apt-get install -y sudo # https://discuss.circleci.com/t/sudo-command-not-found/14208/4
+      - run: ls -al /bin/sh && sudo rm /bin/sh && sudo ln -s /bin/bash /bin/sh && ls -al /bin/sh
       - run:
           name: "Setupdependencies"
           command: |
