--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,13 +4,10 @@ jobs:
     environment:
       CC_TEST_REPORTER_ID: bb4b6d8ecda10518d749b2a6c0a0ec653bb3eedac07a184eb83ca7dbf9db1c2c
     docker:
-      - image: cimg/base:stable
+      - image: "mileschou/xdebug:7.3"
     working_directory: ~/repo
     steps:
       - checkout
-      # Use BASH instead of DASH! see: https://ubuntuforums.org/showthread.php?t=1932504
-      - run: apt-get install -y sudo # https://discuss.circleci.com/t/sudo-command-not-found/14208/4
-      - run: ls -al /bin/sh && sudo rm /bin/sh && sudo ln -s /bin/bash /bin/sh && ls -al /bin/sh
       - run:
           name: "Setupdependencies"
           command: |
@@ -19,6 +16,3 @@ jobs:
       - run:
           name: "SetupCodeClimatetest-reporter"
           command: "curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter chmod +x ./cc-test-reporter"
-      - run:
-          name: "Runtests"
-          command: "sudo docker-php-ext-enable xdebug ./cc-test-reporter before-build sudo vendor/bin/phpunit --coverage-clover clover.xml ./cc-test-reporter after-build --coverage-input-type clover --exit-code $?"
