--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,15 +4,9 @@ jobs:
     environment:
       CC_TEST_REPORTER_ID: bb4b6d8ecda10518d749b2a6c0a0ec653bb3eedac07a184eb83ca7dbf9db1c2c
     docker:
-      - image: "mileschou/xdebug:7.3"
+      - image: circleci/node:14.19
     working_directory: ~/repo
     steps:
       - checkout
-      - run:
-          name: "Setupdependencies"
-          command: |
-            sudo composer self-update
-            composer install -n --prefer-dist
-      - run:
-          name: "SetupCodeClimatetest-reporter"
-          command: "curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter chmod +x ./cc-test-reporter"
+      - run: npm i
+      - run: npm run test
