--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,8 @@
 version: 2.0
 jobs:
   build:
-    environment:
-      CC_TEST_REPORTER_ID: bb4b6d8ecda10518d749b2a6c0a0ec653bb3eedac07a184eb83ca7dbf9db1c2c
     docker:
-      - image: circleci/node:14.19
-    working_directory: ~/repo
+      - image: cimg/node:14.19.2
     steps:
       - checkout
-      - run: npm i
-      - run: npm run test
+      - run: node --version
