Ajuste no config de workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,4 +7,4 @@ jobs:
       - checkout
       - run: node --version
       - run: npm install
-      - run: npm run test
+      - run: npm run test:cov
