--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,4 +21,8 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       # run tests!
-      - run: npm run test:cov
+      - run:
+          name: "Run Test and Collect Coverage Reports"
+          command: npm run test:cov
+      - store_artifacts:
+          path: coverage
